some reorganizations, linking to hardcoded file

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,8 +9,8 @@
 				"/Zi",
 				"/EHsc",
 				"/Fe:",
-				"${fileDirname}\\${fileBasenameNoExtension}.exe",
-				"${file}"
+				"${cwd}\\JobsJoggt.exe",
+				"${workspaceFolder}\\src\\*.cpp"
 			],
 			"options": {
 				"cwd": "${workspaceFolder}"
