--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -2,7 +2,7 @@ on: push
 name: Clippy check
 jobs:
   clippy_check:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v1
       - run: rustup component add clippy
