--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -2,6 +2,7 @@ on: pull_request
 name: Clippy Annotations
 jobs:
   clippy_annotations:
+  if: "!contains(github.event.head_commit.message, '[clippy skip]') && !contains(github.event.head_commit.message, '[skip clippy]'"
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v1
