--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -9,7 +9,7 @@ env:
 
 jobs:
   build:
-
+  if: "!contains(github.event.head_commit.message, '[build skip]') && !contains(github.event.head_commit.message, '[skip build]'"
     runs-on: ubuntu-18.04
 
     steps:
