--- a/.github/workflows/continous-integration.yml
+++ b/.github/workflows/continous-integration.yml
@@ -14,5 +14,16 @@ jobs:
         uses: actions/checkout@v2
       - name: Build on Linux
         run: cargo build --verbose
-      - name: Run Tests
+      - name: Run tests
+        run: cargo test --verbose
+
+    name: Windows Rust Build
+    runs-on: windows-2019
+    
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+      - name: Build on Windows
+        run: cargo build --verbose
+      - name: Run tests
         run: cargo test --verbose
