--- a/.github/workflows/continous-integration.yml
+++ b/.github/workflows/continous-integration.yml
@@ -5,27 +5,16 @@ on:
   pull_request:
 
 jobs:
-  build1:
-    name: Linux Rust Build
-    runs-on: ubuntu-18.04
-
+  build:
+    name: Rust Build
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-18.04, windows-2019]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-      - name: Build on Linux
-        run: cargo build --verbose
-      - name: Run tests
-        run: cargo test --verbose
-
-
-  build2:
-    name: Windows Rust Build
-    runs-on: windows-2019
-    
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-      - name: Build on Windows
+      - name: Build project
         run: cargo build --verbose
       - name: Run tests
         run: cargo test --verbose
