--- a/.github/workflows/clippy-lint.yml
+++ b/.github/workflows/clippy-lint.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v1
       - name: add clippy
-        run: rustup compoment add clippy
+        run: rustup component add clippy
       - name: lint with clippy
         uses: actions-rs/clippy-check@v1
         with:
